Bug 491247 - Regression: cannot use kio "info:" protocol to browse texlinfo documentation
Summary: Regression: cannot use kio "info:" protocol to browse texlinfo documentation
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.05.2
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-04 06:55 UTC by Sergio
Modified: 2024-12-03 22:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sergio 2024-08-04 06:55:32 UTC
SUMMARY

Looks like it has become impossible to use the "info:" kio protocol to browse the texinfo documentation on the system. For instance neither "info:dir" nor "info://dir" nor "info:gcc" nor "info://gcc" work. This used to work until not long ago.
The texinfo documentation is still browseable via the kde help center.

STEPS TO REPRODUCE
1. start falkon
2. try to browse the system info files

OBSERVED RESULT

You get a page is not reachable error

EXPECTED RESULT

KIO should be used to access the info pages.

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux 
KDE Plasma Version: 6.0.5
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.2
Kernel Version: 6.6.41-1-MANJARO (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-4750HQ CPU @ 2.00GHz
Memory: 15.5 GiB of RAM
Graphics Processor: Mesa Intel® Iris® Pro Graphics P5200
Comment 1 Bug Janitor Service 2024-11-16 23:23:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/falkon/-/merge_requests/95
Comment 2 Juraj 2024-12-03 22:41:23 UTC
Git commit b456c18bf62b8f806d36f4968befafffbbc276b6 by Juraj Oravec.
Committed on 03/12/2024 at 22:33.
Pushed by jurajo into branch 'master'.

Fix KIO scheme handler

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +21   -12   src/plugins/KDEFrameworksIntegration/kioschemehandler.cpp

https://invent.kde.org/network/falkon/-/commit/b456c18bf62b8f806d36f4968befafffbbc276b6