Fix KIO scheme handler

BUG: 491247

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>